# Sockets

./: cert.csr  client.py  gen_cert_key.sh  priv.pem  pub.pem  pyproject.toml
client/: client.py  data.py
nothread/: cert.crt
nothread/client/: client.py  install.sh
nothread/server/: data.csv  server.py  site.py
server/: data.csv
test/: client.py  server.py
thread/client/: client.py
thread/server/: install.sh  server.py  site.py
thread/server/data/: 127-0-0-1-43542.csv  127-0-0-1-43996.csv
