[tool.poetry]
name = "socketsredes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
pycryptodome = "^3.20.0"
pandas = "^2.2.2"
streamlit = "^1.37.1"
matplotlib = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
